0032506: Visualization - add AIS_InteractiveContext::ObjectIterator() for iterating over objects in context